--- a/angular.json
+++ b/angular.json
@@ -68,10 +68,10 @@
             "builder": "@angular-devkit/build-angular:dev-server",
             "configurations": {
               "production": {
-                "browserTarget": "primeng-quickstart-cli:build:production"
+                "buildTarget": "primeng-quickstart-cli:build:production"
               },
               "development": {
-                "browserTarget": "primeng-quickstart-cli:build:development"
+                "buildTarget": "primeng-quickstart-cli:build:development"
               }
             },
             "defaultConfiguration": "development"
@@ -79,7 +79,7 @@
           "extract-i18n": {
             "builder": "@angular-devkit/build-angular:extract-i18n",
             "options": {
-              "browserTarget": "primeng-quickstart-cli:build"
+              "buildTarget": "primeng-quickstart-cli:build"
             }
           },
           "test": {
