--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "primeng-quickstart-cli",
-  "version": "1.0.0-SNAPSHOT",
+  "name": "chodsky-kroj",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/primefaces/primeng-quickstart-cli.git"
+    "url": "https://github.com/primefaces/chodsky-kroj.git"
   },
   "dependencies": {
     "@angular/animations": "^17.1.0",
